dark.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    max-height: 100vh;
    font-family: "Montserrat", sans-serif;
    color: #f1e9da;
    background-color: #041f4a;
}

a {
    text-decoration: none;
    color: rgb(75, 175, 117);
    text-align: center;
}

a:hover,
#cv:hover {
    color: #fb8b24;
}

#cv {
    color: rgb(75, 175, 117);
    cursor: pointer;
}

#container {
    height: 100vh;
    display: grid;
    grid-template-columns: 150px 1fr 1fr;
    grid-template-rows: 1fr 1fr 4fr;
    grid-template-areas: "pic name project-container" "welcome welcome project-container" "about-me about-me project-container";
}

/*__BANNER__*/

.pic {
    grid-area: pic;
    margin: 1%;
    display: flex;

    align-items: center;
}

.self {
    margin: 1%;
    object-fit: cover;
}

.self img {
    border: 5px solid #fb8b24;
    height: 150px;
    border-radius: 20px;
}

.name {
    grid-area: name;
    margin: 1%;
    display: flex;
    justify-content: center;
    align-items: center;

    font-size: 2.5rem;
    font-weight: bold;

    background-image: linear-gradient(
        90deg,
        transparent 10%,
        rgba(147, 154, 157, 0.05) 19%,
        rgba(147, 154, 157, 0.1) 34%,
        rgba(147, 154, 157, 0.2) 47%,
        rgba(147, 154, 157, 0.3) 56%,
        rgba(147, 154, 157, 0.4) 65%,
        rgba(147, 154, 157, 0.5) 73%,
        rgba(147, 154, 157, 0.6) 80%,
        rgba(147, 154, 157, 0.7) 86%,
        rgba(147, 154, 157, 0.8) 91%,
        rgba(147, 154, 157, 0.9) 98%,
        rgba(147, 154, 157, 1) 100%
    );

    border-radius: 30px;
    color: #fb8b24;
}

/*__WELCOME MESSAGE__*/

.welcome {
    grid-area: welcome;
    display: flex;
    flex-direction: row;
    margin: 0 1%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 2rem;
    font-weight: bold;
}

.text {
    height: 100%;
    width: 2fr;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
}

.choice {
    height: 100%;
    width: 1fr;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.lang,
.theme {
    height: 100%;
    width: 1fr;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

button {
    font-family: inherit;
    font-size: 1rem;
    padding: 5px;
    border: 2px solid #f1e9da;
    background-color: #f1e9da;
    color: #041f4a;
    border-radius: 20px;
}

button:hover,
button:focus {
    background-color: #fb8b24;
}

#lang {
    margin: 0 10px;
}

/*__INFO BOX__*/

.about-me {
    grid-area: about-me;
    margin: 1%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    text-align: center;
    padding: 2%;
    background-image: linear-gradient(
        to bottom left,
        rgba(147, 154, 157, 0.05) 19%,
        rgba(147, 154, 157, 0.1) 34%,
        rgba(147, 154, 157, 0.2) 47%,
        rgba(147, 154, 157, 0.3) 56%,
        rgba(147, 154, 157, 0.4) 65%,
        rgba(147, 154, 157, 0.5) 73%,
        rgba(147, 154, 157, 0.6) 80%,
        rgba(147, 154, 157, 0.7) 86%,
        rgba(147, 154, 157, 0.8) 91%,
        rgba(147, 154, 157, 0.9) 98%,
        rgba(147, 154, 157, 1) 100%,
        #041f4a
    );
    border-radius: 30px;
    font-size: 1.25rem;
}

.contact-me {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}

em {
    color: #4baf75;
    font-size: 0.8rem;
    margin: 1rem 0 0 0;
}

/*__PROJECTS__*/

.project-container {
    grid-area: project-container;
    margin: 1%;

    font-size: 2rem;
    background-image: linear-gradient(to top left, #041f4a, #939a9d);
    border-radius: 30px;

    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.projects-header {
    grid-area: projects-header;
    display: flex;
    justify-content: center;
    text-align: center;
    align-items: center;
    font-weight: bold;
    padding-top: 2%;
}

.project a {
    display: flex;
    height: 100%;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

.project-name {
    margin: 2% 0;
    font-size: 1.75rem;
    font-weight: bold;
}
.project-info {
    font-size: 1.25rem;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    height: 100%;
    overflow-y: hidden;
}

.image-box {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: 5%;
}

img.project-image {
    width: 40vh;
    height: 40vh;
    border: 5px solid #041f4a;
    border-radius: 20px;
    padding: 2%;
}

.project-description {
    padding: 0 20px 0 10px;
}

.projects p {
    margin-top: 2%;
}

/*__MODAL__*/

.modal-container {
    visibility: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgba(241, 233, 218, 0.35);
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.vis {
    visibility: visible;
    z-index: +1;
}

.cv-modal {
    display: flex;
    flex-direction: column;
    background-color: #041f4a;
    height: 90vh;
    width: 80%;
    border-radius: 20px;
    align-items: center;
    justify-content: left;
    padding: 20px;
    font-size: 2rem;
}

#modal-x {
    display: flex;
    flex-direction: row-reverse;
    align-items: flex-end;
    text-align: right;
    width: 100%;
}

#X {
    color: #fb8b24;
    cursor: pointer;
    font-size: 2rem;
    font-weight: bold;
    padding-right: 10px;
}

#X:hover {
    color: #c70000;
}

.modal-text {
    width: 100%;
    overflow-y: scroll;
}

.modal-text a {
    font-size: 1rem;
    padding: 0;
}

.cv-text {
    font-size: 1.25rem;
}

h4 {
    font-size: 1.5rem;
    text-align: center;
    color: #fb8b24;
}

li {
    margin: 1% 0 1% 2%;
}

h5 {
    font-size: 1.25rem;
    color: #fb8b24;
    margin: 2% 0 1% 0;
}

.print h4 {
    margin-top: 2%;
}

.print a {
    font-size: 1.25rem;
}

.print a:hover {
    color: #c70000;
}

@media screen and (max-width: 415px) {
    body {
        height: auto;
        background-image: none;
    }

    #container {
        grid-template-columns: 75px 1fr;
        grid-template-rows: 1fr 1fr 1fr 1fr;

        grid-template-areas: "pic name" "welcome welcome" "about-me about-me" "project-container project-container";
    }

    .self img {
        height: 75px;
        border-width: 2px;
    }

    .name,
    .welcome,
    .projects-header {
        font-size: 1.5rem;
    }

    .projects-header {
        margin: 10px 0;
    }

    button {
        font-size: 0.75rem;
        padding: 2px;
    }

    .about-me,
    .project-info {
        font-size: 1rem;
        border-width: 2px;
    }

    .project-name {
        font-size: 1.25rem;
        margin-bottom: 10px;
    }

    em {
        font-size: 0.5rem;
    }

    .project-container {
        background-image: none;
        height: 600px;
    }

    img.project-image {
        border-width: 2px;
        margin-bottom: 10px;
    }

    #X {
        font-size: 1rem;
        padding: 0 5px 5px 0;
    }

    .cv-text {
        font-size: 1rem;
    }

    h4 {
        font-size: 1.25rem;
        padding: 10px 0 0 0;
    }

    h5 {
        font-size: 1rem;
        margin: 2% 0 0 0;
    }

    .print a {
        font-size: 1rem;
    }
}

